# pydantic-ai-agent

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
docs/articles/: 01-pydantic-ai-introduction.md  02-fastapi-agent-api.md  03-streamlit-frontend.md
src/: README.md  bank_support.py  run_agent.py  run_service.py
src/agent/: README.md
src/agents/: README.md  bank_support.py  deps.py
src/client/: _env.py  api_client.py  client_app.py  utls.py
src/service/: README.md  __init__.py  main.py
src/service/api/: __init__.py
src/service/api/agent/: endpoints.py  handlers.py  operations.py
src/service/api/health/: endpoints.py
src/service/api/thread/: endpoints.py  handlers.py
src/service/core/: __init__.py  settings.py  utils.py
src/service/db/: __init__.py  adapters.py  base.py  database.py  session.py
src/service/dependencies/: __init__.py  auth.py  user.py
src/service/middleware/: __init__.py  auth.py
src/service/models/: __init__.py
src/service/models/api/: __init__.py  agent_models.py  errors.py  internal.py  message_models.py  stream_models.py  thread_models.py
src/service/models/database/: __init__.py  errors.py  models.py
tests/: test_bank_support.py
